[homematic] correct warnings (#6531)
Signed-off-by: Michael Roßner <Schrott.Micha@web.de>